k8s-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
  labels:
    app: springboot
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: localhost:5000/springboot
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
