k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot
  labels:
    app: springboot
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080    
  selector:
    app: springboot
  type: NodePort
