k8s-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: springboot-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8888
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springboot
spec:
  hosts:
  - "*"
  gateways:
  - springboot-gateway
  http:
  - match:
    - uri:
        exact: /ping
    - uri:
        exact: /info
    route:
    - destination:
        host: springboot
        port:
          number: 8090
