k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  defaultBackend:
    service:
      name: springboot
      port:
        number: 80
